// vim: tabstop=2 shiftwidth=2 softtabstop=2 smarttab expandtab autoindent

= Tackler-NG: Changelog

== Releases

=== Tackler release XX.YY.Z

==== New features and changes

New features:

* ...
  ** ...

Changed functionality:

* ...
  ** ...


==== Fixes

Fixes in this release ...


==== Development

Updated dependencies (major or minor version):

* ...

===== Rust toolchain

Rust Edition:: 2024
MSRV:: 1.85.0

==== Release Artifacts

[cols="1,2",width=50%]
|===
|Component    | Version

|Tackler CLI  | TODO: XX.YY.Z
|tackler-core | TODO: No changes
|tackler-api  | TODO: No changes
|tackler-rs   | TODO: No changes
|===


'''

=== Tackler release 25.04.2

==== New features and changes

New features:

* New flat balance report option for Balance and Balance Group Reports
  ** link:https://github.com/tackler-ng/tackler/blob/main/docs/tep/tep-1016.adoc[TEP-1016]
  ** link:https://tackler.e257.fi/docs/report-balance/[Flat Balance] report
  ** link:https://tackler.e257.fi/docs/report-balance-group/[Flat Balance Group] report

Changed functionality:

* New optional configuration key `report.balance.type` and `report.balance-group.type`,
  default is tackler's original balance report type tree.


==== Fixes

None

==== Development

No major updates


===== Rust toolchain

Rust Edition:: 2024
MSRV:: 1.85.0

==== Release Artifacts

[cols="1,2",width=50%]
|===
|Component    | Version

|Tackler CLI  | 25.04.2
|tackler-core | 0.10.0
|tackler-api  | 0.9.1
|tackler-rs   | No changes
|===


'''


=== Tackler release 25.04.1

==== New features and changes

New features:

* New feature: link:https://tackler.e257.fi/docs/price/[Support for Commodity Price data] (link:https://github.com/tackler-ng/tackler/blob/main/docs/tep/tep-1015.adoc[TEP-1015])
  ** PriceDB support
  ** Support for various commodity price (Mark-to-Market) models:
    *** link:https://tackler.e257.fi/docs/price/current-market-value/[Current Market Value]