@@ -52,4 +52,4 @@ regex =  { version = "1.11.1" }
 serde = { version = "1.0.219", default-features = false }
 serde_json = { version = "1.0.140" , default-features = false, features = [ "std", "arbitrary_precision" ] }
 itertools = "0.14.0"
-tikv-jemallocator = "0.6.0"
+mimalloc = { version = "0.1.46" }
