@@ -1,4 +1,4 @@
-Copyright (c) 2014 Alex Crichton
+Copyright 2019 Octavian Oncescu
 
 Permission is hereby granted, free of charge, to any
 person obtaining a copy of this software and associated
