@@ -15,8 +15,11 @@ New features:
 
 Changed functionality:
 
-* ...
-  ** ...
+* Change default allocator
+  ** Replace `tikv-jemallocator` with `mimalloc`
+     *** Mimalloc is available on Linux, Windows and MacOS
+     *** It's ~20% faster on Linux and Windows, but on MacOS difference is only about 5%
+     *** Memory usage increases about 30% an all platforms
 
 
 ==== Fixes
